Signal handler for server part

--- a/server/Makefile
+++ b/server/Makefile
@@ -26,7 +26,7 @@ $(OBJDIR)/%.o: %.c
 .PHONY: clean mrproper
 
 clean:
-	@rm -rf *.o
+	rm -rf *.o
 
 mrproper: clean
-	@rm -rf $(BIN) $(OBJ)
+	rm -rf $(BIN) $(OBJ)
